--- a/app/src/main/res/layout/fragment_simple_card.xml
+++ b/app/src/main/res/layout/fragment_simple_card.xml
@@ -4,11 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_statue"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_coupon"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="dsa"
-        android:gravity="center"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
